2021-05-31  7.0.11-14  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-14 GIT revision 18775:354f421e4:20210531

2021-05-20  7.0.11-14  Dirk Lemstra <dirk@lem.....org>
  * Added support for reading and writing 16-bit jxl images.

2021-05-17  7.0.11-13  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-13 GIT revision 18751:0365211b2:20210517

2021-05-12  7.0.11-13  Dirk Lemstra <dirk@lem.....org>
  * Fixed reading and writing the XMP chunk in a WebP image (reference
    https://github.com/ImageMagick/ImageMagick/discussions/3617).
  * Added support to set the jpeg-xl encoding effort with
    -define jxl:effort=<number>

2021-05-09  7.0.11-13  <quetzlzacatenango@image...>
  * label and caption sanity check is too conservative.

2021-05-09  7.0.11-12  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-12 GIT revision 18703:04c9de9b0:20210509

2021-05-07  7.0.11-12  Dirk Lemstra <dirk@lem.....org>
  * The HEIC depth image will now only be read when the define heic:depth-image
    is true.

2021-05-06  7.0.11-12  <quetzlzacatenango@image...>
  * -layers optimize no longer produces broken output (reference
    https://github.com/ImageMagick/ImageMagick/issues/3520).

2021-05-04  7.0.11-11  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-11 GIT revision 18678:5d4dc32ea:20210504

2021-05-04  7.0.11-11  <quetzlzacatenango@image...>
  * FL32 no longer returns scambled results (reference
    https://github.com/ImageMagick/ImageMagick/issues/3614).
  * Ashlar pseudo-image format no longer crops labels in last row of tiles by
    default (reference https://github.com/ImageMagick/ImageMagick/issues/3618).

2021-04-28  7.0.11-10  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-10 GIT revision 18658:ffe570952:20210428

2021-04-25  7.0.11-10  <quetzlzacatenango@image...>
  * Optimize CompareImageBounds().
  * Check image is not NULL before dereferencing.
